changed people to users :lipstick:
