# swagger.yml
@@ -2,37 +2,37 @@ swagger: "2.0"
 info:
   description: This is the swagger file that goes with our server code
   version: "1.0.0"
-  title: Swagger ReST Article
+  title: Swagger REST Article
 consumes:
   - application/json
 produces:
   - application/json
 
-basePath: /api
+basePath: /v1
 
 # Paths supported by the server application
 paths:
-  /people:
+  /users:
     get:
-      operationId: people.read_all
+      operationId: users.read_all
       tags:
-        - People
-      summary: Read the entire list of people
-      description: Read the list of people
+        - Users
+      summary: Read the entire list of users
+      description: Read the list of users
       parameters:
         - name: length
           in: query
           type: integer
-          description: Number of people to get from people
+          description: Number of users to get from users
           required: false
         - name: offset
           in: query
           type: integer
-          description: Offset from beginning of list where to start gathering people
+          description: Offset from beginning of list where to start gathering users
           required: false
       responses:
         200:
-          description: Successfully read people list operation
+          description: Successfully read users list operation
           schema:
             type: array
             items:
@@ -45,45 +45,45 @@ paths:
                   type: string
 
     post:
-      operationId: people.create
+      operationId: users.create
       tags:
-        - people
-      summary: Create a person and add it to the people list
-      description: Create a new person in the people list
+        - users
+      summary: Create a user and add it to the users list
+      description: Create a new user in the users list
       parameters:
-        - name: person
+        - name: user
           in: body
-          description: Person to create
+          description: User to create
           required: True
           schema:
             type: object
             properties:
               fname:
                 type: string
-                description: First name of person to create
+                description: First name of user to create
               lname:
                 type: string
-                description: Last name of person to create
+                description: Last name of user to create
       responses:
         201:
-          description: Successfully created person in list
+          description: Successfully created user in list
 
-  /people/{lname}:
+  /users/{lname}:
     get:
-      operationId: people.read_one
+      operationId: users.read_one
       tags:
-        - people
-      summary: Read one person from the people list
-      description: Read one person from the people list
+        - users
+      summary: Read one user from the users list
+      description: Read one user from the users list
       parameters:
         - name: lname
           in: path
-          description: Last name of the person to get from the list
+          description: Last name of the user to get from the list
           type: string
           required: True
       responses:
         200:
-          description: Successfully read person from people list operation
+          description: Successfully read user from users list operation
           schema:
             properties:
               fname:
@@ -94,18 +94,18 @@ paths:
                 type: string
 
     put:
-      operationId: people.update
+      operationId: users.update
       tags:
-        - people
-      summary: Update a person in the people list
-      description: Update a person in the people list
+        - users
+      summary: Update a user in the users list
+      description: Update a user in the users list
       parameters:
         - name: lname
           in: path
-          description: Last name of the person to update in the list
+          description: Last name of the user to update in the list
           type: string
           required: True
-        - name: person
+        - name: user
           in: body
           schema:
             type: object
@@ -116,14 +116,14 @@ paths:
                 type: string
       responses:
         200:
-          description: Successfully updated person in people list
+          description: Successfully updated user in users list
 
     delete:
-      operationId: people.delete
+      operationId: users.delete
       tags:
-        - people
-      summary: Delete a person from the people list
-      description: Delete a person
+        - users
+      summary: Delete a user from the users list
+      description: Delete a user
       parameters:
         - name: lname
           in: path
@@ -131,4 +131,4 @@ paths:
           required: True
       responses:
         200:
-          description: Successfully deleted a person from people list
+          description: Successfully deleted a user from users list
